force-app/main/default/objects/Rep__c.object
<CustomObject>
    <fields>
        <fullName>Current_Workload__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Workload</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Weight__c</fullName>
        <label>Distribution Weight</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_1__c</fullName>
        <label>Language 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_2__c</fullName>
        <label>Language 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_3__c</fullName>
        <label>Language 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Priority_c__c</fullName>
        <description>Integer value that prioritizes how valuable a rep is in a round robin process based off of total languages</description>
        <label>Language_Priority__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Languages assigned to rep</description>
        <inlineHelpText>Languages assigned to rep</inlineHelpText>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>APAC English</fullName>
                    <isActive>false</isActive>
                    <label>APAC English</label>
                </value>
                <value>
                    <fullName>EMEA English</fullName>
                    <isActive>false</isActive>
                    <label>EMEA English</label>
                </value>
                <value>
                    <fullName>NORAM English</fullName>
                    <isActive>false</isActive>
                    <label>NORAM English</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Case_Workload__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Max Case Workload</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Reps</relationshipLabel>
        <relationshipName>Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <formula>User__r.FirstName+&apos; &apos;+ User__r.LastName</formula>
        <label>Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SER_Region_Language_2__c</fullName>
        <description>Enables a second region option if a Rep is qualified to receive opportunities from more than one region</description>
        <label>SER Region Language 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SER_Region_Language__c</fullName>
        <description>Field that makes sure if a rep speaks english, that they are sorted into the correct english region</description>
        <label>SER Region Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SDR_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rep</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region_Name__c</columns>
        <columns>Current_Workload__c</columns>
        <columns>Distribution_Weight__c</columns>
        <columns>Out_Of_Office__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reps</pluralLabel>
    <recordTypes>
        <fullName>SDR</fullName>
        <active>true</active>
        <label>SDR</label>
    </recordTypes>
    <recordTypes>
        <fullName>SER</fullName>
        <active>true</active>
        <label>SER</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>